2008-05-28  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk/Object.custom: If all destroy handlers have been
	unregistered, remove the hashtable entry since it is
	not needed anymore.

2008-05-27  Mike Kestner  <mkestner@novell.com>

	* generator/Method.cs (GenerateBody): when generating value type
	methods, we should demarshal the 'this' memory before any ref or
	out parameters in the event that someone passes 'this' as a param.
	That will ensure that an updated value coming back from the native
	side ends up in the memory location.

2008-05-22  Mike Kestner  <mkestner@novell.com>

	* gtk/Widget.custom: guard against MissingIntPtrCtorException in
	the Activate and SetScrollAdjustments funky signal VM impl. Can't
	use SignalClosure easily.  Could be reworked more cleanly at some
	point.  Or not.

2008-05-21  Mike Kestner  <mkestner@novell.com>

	* gtk/Object.custom (OnDestroyed): ensure Dispose runs even if
	no Destroyed handlers are connected.

2008-05-21  Mike Kestner  <mkestner@novell.com>

	* gtk/Application.cs (CurrentEvent): use Event.GetEvent to retrieve
	an explicit event subclass.

2008-05-15  Mike Kestner  <mkestner@novell.com>

	* kill the makefile.win32 build system.  it has been unmaintained
	for quite some time, replaced by the auto* build in cygwin.

2008-05-14  Andres G. Aragoneses <aaragoneses@novell.com> 

	* atk/Object.custom: Track API changes in GLib.Signal.
	* glib/Signal.cs: AddEmissionHook binding (for closing #386950), and
	  change API of Emit to mimic the detailed_signal pattern.
	* glib/GType.cs: GType.FromName: new wrapper for native call.
	* glib/ObjectManager.cs: Use the new FromName managed method.

2008-05-08  Mike Kestner  <mkestner@novell.com>

	* atk/atk-api-2.12.raw: reparsed.
	* gdk/gdk-api-2.12.raw: reparsed.
	* gtk/gtk-api-2.12.raw: reparsed.
	* parser/gapi2xml.pl: fixes for signal and vm order needed for 
	proper interface struct layout. [Fixes #386802]

2008-05-07  Stephane Delcroix  <sdelcroix@novell.com>
