@@ -21,6 +21,30 @@
 // Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 // Boston, MA 02111-1307, USA.
 
+		[DllImport("gtksharpglue-2")]
+		private static extern bool gtksharp_object_override_destroy (DestroyVMDelegate handler);
+
+		static DestroyVMDelegate destroy_vm_handler;
+
+		static Object ()
+		{
+			destroy_vm_handler = new DestroyVMDelegate (DestroyVMCallback);
+			gtksharp_object_override_destroy (destroy_vm_handler);
+		}
+
+		[GLib.CDeclCallback]
+		delegate void DestroyVMDelegate (IntPtr handle);
+
+		static void DestroyVMCallback (IntPtr handle)
+		{
+			try {
+				GLib.Object obj = GLib.Object.GetObject (handle, false);
+				if (obj != null)
+					obj.Dispose ();
+			} catch (Exception) {
+			}
+		}
+
 		static Hashtable destroy_handlers;
 		static Hashtable DestroyHandlers {
 			get {
@@ -46,7 +70,6 @@
 				handler (this, EventArgs.Empty);
 				DestroyHandlers.Remove (Handle);
 			}
-			Dispose ();
 		}
 
 		[GLib.Signal("destroy")]
