@@ -1,3 +1,9 @@
+2008-05-28  Mike Kestner  <mkestner@novell.com>
+
+	* gtk/Object.custom: move Dispose call to a vm override so that
+	it runs after all signals and native overrides have run.
+	* gtk/glue/object.c: destroy override implementation.
+
 2008-05-28  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* gtk/Object.custom: If all destroy handlers have been
